--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 body {
   font-family: arial, sans-serif;
+  margin: 0 auto;
 }
 
 h1 {
-  color: #878787;
+  color: #080808;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -30,13 +31,15 @@ li:first-letter {
   float: left;
 }
 .weather-app-wrapper {
-  max-width: 600px;
+  max-width: 800px;
   margin: 30px auto;
 }
 .weather-app {
+  background-color: antiquewhite;
   padding: 20px;
   border: 1px solid #dadded;
   border-radius: 10px;
+  margin: 0 auto;
 }
 .overview {
   margin-bottom: 20px;
@@ -82,4 +85,35 @@ li:first-letter {
 }
 .weather-forecast-temperatures-min {
   opacity: 0.5;
+}
+.btn-primary {
+  background-color: #eb6e4b;
+  border-color: #eb6e4b;
+}
+.card {
+  box-shadow: 3px 6px rgb(169, 164, 164);
+}
+.col-2 {
+  display: block;
+  border-color: #070707;
+}
+
+.row-frame {
+  content: "";
+  display: table;
+  clear: both;
+}
+.col {
+  float: left;
+  width: 30%;
+}
+.hourly-forecast {
+  margin-bottom: 5px;
+}
+#search-form {
+  width: 100%;
+  margin-left: 35%;
+}
+.btn-primary {
+  margin-top: 5px;
 }
