--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,17 @@ li:first-letter {
 .btn-primary {
   background-color: #eb6e4b;
   border-color: #eb6e4b;
+  margin-top: 5px;
+  width: 100%;
+}
+.btn-primary:hover {
+  background-color: rgb(246, 212, 169);
+  border-color: #eb6e4b;
+}
+.btn-primary:focus {
+  border-color: #ff0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+  background-color: #eb6e4b;
 }
 .card {
   box-shadow: 3px 6px rgb(169, 164, 164);
@@ -113,7 +124,4 @@ li:first-letter {
 #search-form {
   width: 100%;
   margin-left: 35%;
-}
-.btn-primary {
-  margin-top: 5px;
 }
